[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/Enemies/Slime 4.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Enemies/Slime 7.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Enemies/Slime 1.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Enemies/Slime 6.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Enemies/Slime 3.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Enemies/Slime 5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Enemies/Slime 2.png" type="Texture" id=7]
[ext_resource path="res://Scenes/Slime.gd" type="Script" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 1 ), ExtResource( 6 ), ExtResource( 4 ) ],
"loop": true,
"name": "Jump",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ), ExtResource( 1 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 5 ) ],
"loop": true,
"name": "Fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "Air",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=2]
radius = 7.12184

[sub_resource type="CircleShape2D" id=3]
radius = 5.97654

[node name="Slime" type="KinematicBody2D"]
collision_layer = 6
collision_mask = 6
script = ExtResource( 8 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -2 )
frames = SubResource( 1 )
animation = "Idle"
speed_scale = 6.0
playing = true

[node name="Hurtbox" type="Area2D" parent="."]
visible = false
position = Vector2( 0, 2 )
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource( 2 )

[node name="Left" type="RayCast2D" parent="."]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( -50, 0 )
collision_mask = 2

[node name="Right" type="RayCast2D" parent="."]
position = Vector2( 0, 2 )
enabled = true
cast_to = Vector2( 50, 0 )
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, 2 )
shape = SubResource( 3 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.05
[connection signal="animation_finished" from="Sprite" to="." method="_on_Sprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="body_entered" from="Hurtbox" to="." method="_on_Hurtbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
